[spark] Correct z-index of play/stop buttons

--- a/apps/spark/static/css/spark.css
+++ b/apps/spark/static/css/spark.css
@@ -75,7 +75,7 @@
   position: absolute;
   margin-top: -30px;
   margin-left: 0;
-  z-index: 10000;
+  z-index: 999;
   border-left: none;
   border-right: none;
   width: 14px;
